--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,8 +14,10 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="101dp"
+        android:background="@drawable/edit_text_bg"
         android:ems="10"
         android:inputType="textPersonName"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,12 +30,14 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="103dp"
         android:ems="10"
+        android:background="@drawable/edit_text_bg"
+        android:padding="10dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,6 +45,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="166dp"
         android:text="Login"
+        android:background="@drawable/edit_text_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
