Saving image to phone

--- a/app/src/main/res/layout/activity_getting_an_image.xml
+++ b/app/src/main/res/layout/activity_getting_an_image.xml
@@ -22,4 +22,13 @@
         android:layout_below="@id/downloadButton"
         android:layout_marginTop="25dp"/>
 
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/progressBar"
+        android:layout_below="@id/downloadedImageView"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
